RESOLVED FIXED146457
[Win] webViewAddMessageToConsole always gets 1 for isError
https://bugs.webkit.org/show_bug.cgi?id=146457
Summary [Win] webViewAddMessageToConsole always gets 1 for isError
Brent Fulgham
Reported 2015-06-30 09:14:02 PDT
The code that calls the Windows API "webViewAddMessageToConsole" has a hard coded "isError = True" argument. This causes console output on Windows to improperly show errors in the many cases where the log content is informational.
Attachments
Correct argument to delegate method. (1.95 KB, patch)
2015-06-30 09:24 PDT, Brent Fulgham
zalan: review+
Brent Fulgham
Comment 1 2015-06-30 09:14:31 PDT
Brent Fulgham
Comment 2 2015-06-30 09:24:43 PDT
Created attachment 255823 [details] Correct argument to delegate method.
Brent Fulgham
Comment 3 2015-06-30 10:34:07 PDT
Note You need to log in before you can comment on or make changes to this bug.