[Win] webViewAddMessageToConsole always gets 1 for isError https://bugs.webkit.org/show_bug.cgi?id=146457 <rdar://problem/21606395>

Reviewed by Zalan Bujtas.

* WebCoreSupport/WebChromeClient.cpp:
(messageIsError): Added.
(WebChromeClient::addMessageToConsole): Only pass true for
isError if the message is an error message.



Canonical link: https://commits.webkit.org/164549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186121 268f45cc-cd09-0410-ab3c-d52691b4dbfc